--- a/FrontEnd/Admin-Panel/package.json
+++ b/FrontEnd/Admin-Panel/package.json
@@ -15,10 +15,13 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "bootstrap": "^5.3.1",
     "font-awesome": "^4.7.0",
-    "mdb-react-ui-kit": "^6.2.0",
+    "mdb-react-ui-kit": "^6.3.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0",
     "styled-components": "^6.0.7"
   },
   "devDependencies": {
